[package]
name = "tdx_attest"
version = "0.1.0"
edition = "2021"
authors = ["Hairong Chen <hairong.chen@intel.com>"]
description = "A rust lib to get TD Report and TDX quote"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hairongchen/tdx-attest.git"

[dependencies]
nix = "0.26"
anyhow = "1.0"
hex = "0.4.3"
tdx-attest-rs = { version = "0.1.2", git = "https://github.com/intel/SGXDataCenterAttestationPrimitives/blob/aa239d25a437a28f3f4de92c38f5b6809faac842/QuoteGeneration/quote_wrapper/tdx-attest-rs/" }
tdx-attest-sys = { version = "0.1.0", git = "https://github.com/intel/SGXDataCenterAttestationPrimitives/blob/aa239d25a437a28f3f4de92c38f5b6809faac842/QuoteGeneration/quote_wrapper/tdx-attest-sys/" }
